# cellar-gtest-mpi

./: .gitignore  CMakeLists.txt  README.md  format.sh
cmake/: gtest-mpiConfig.cmake.in  install.cmake
lib/: CMakeLists.txt
lib/include/gtest-mpi/: init.hpp
lib/src/: gtest-mpi-listener.hpp  init.cpp
main/: CMakeLists.txt
main/src/: main.cpp
test/: CMakeLists.txt
test/src/: basic.cpp
